--- a/style.css
+++ b/style.css
@@ -1,4 +1,9 @@
+/*
+1. add card types for energy/attack/power
+2. add a spot to track drowning
 
+
+*/
 
 #stats {
   display: flex;
@@ -6,6 +11,8 @@
   border: 1px solid black;
   height: 60vh;
 }
+
+
 
 #stats h4 {
   margin-block-start: 0.1em;
@@ -16,7 +23,7 @@
 
 
 
-#opponentHealthBlock {
+#opponentHealthBlock, .move-name-cost {
   display: flex;
   justify-content: space-between;
 }
@@ -27,7 +34,7 @@
 
 .move {
   border: 1px dashed;
-  line-height: 0.2;
+  font-size: 2.5vh;
   padding: 0.05vh 0.05vw;
   border-radius: 0.6vw;
 }
@@ -54,7 +61,7 @@
   font-size: 1.5vw;
   flex-shrink: 1;
   min-height: 4vh;
-  max-height: 8vh;
+  max-height: 12vh;
   min-width: 4vw;
   max-width: 15vw;
 }
@@ -68,7 +75,7 @@
     font-size: 2vw;
     min-width: 1.5vw;
     max-width: 4vw;
-    height: 6vh;
+    max-height: 12vh;
     flex-shrink: 1;
     border: 1px dashed white;
   }
@@ -90,10 +97,7 @@
   justify-content: space-between;
 }
 
-.monster-top-row h3 {
-  margin-block-start: 0.1em;
-  margin-block-end: 0.1em;
-}
+
 
 .targeted {
     border: 2px dashed red;
@@ -112,10 +116,9 @@
 
 
 img {
-  min-width: 25%;
-  min-height: 25%;
-  max-width: 100%;
-  max-height: 100%;
+  height: 35vh;
+  max-width: 20vw;
+
 }
 
 #opponents {
@@ -140,14 +143,14 @@ img {
 }
 
 #cardScreenSection {
-  height: 35vh;
+  height: 30vh;
   width: 96vw;
   border: 1px solid green;
   text-align: center;
   display: flex;
   flex-direction: row;
   align-content: center;
-  padding: 2vw 0;
+
 }
 
 #drawDiv,
@@ -161,6 +164,8 @@ img {
   top: 10vh;
   left: 10vw;
 }
+
+
 
 #drawPile #drawDiv,
 #discardPile #discardDiv,
@@ -185,22 +190,26 @@ img {
 }
 
 .pile {
-  width: 8vw;
-  height: 8vh;
+  width: 3vw;
+  height: 3vh;
   border: 1px dashed red;
-  vertical-align: middle;
-  margin: 12vh 1vw;
-  padding: 1vw;
+  font-size: 2vh;
 }
 
 .card {
   border: 1px solid black;
   margin: 1%;
-  padding: 0.1%;
   width: 15vw;
   height: 20vh;
   float: left;
   font-size: 70%;
+}
+
+#drawDiv .card,
+#discardDiv .card,
+#deckDiv .card {
+  height: 15vh;
+  width: 8vw;
 }
 
 .fire-energy {
@@ -216,11 +225,39 @@ img {
 }
 
 #handContainer2 {
-  width: 70vw;
-  height: 30vh;
+  width: 90vw;
+  height: 25vh;
   display: flex;
   border: 1px dashed blue;
   justify-content: space-around;
 }
 
 /* https://codersblock.com/blog/creating-glow-effects-with-css/ */
+
+.monster-top-row h3, .move h3, .move p, .card h3, .card p {
+  margin-block-start: 0.1em;
+  margin-block-end: 0.1em;
+}
+
+.card p, .card button {
+  font-size: 2.5vh;
+}
+
+.card h3 {
+  font-size: 3.5vh;
+}
+
+.monster-energy {
+  font-size: 3vh;
+}
+
+.energy-cost {
+  min-width: 1.2vw;
+  text-align: center;
+  font-size: 3.5vh;
+  border-radius: 50%;
+  padding: 0.29em;
+  background-color: red;
+  font-weight: bold;
+  color: white;
+}
