--- a/style.css
+++ b/style.css
@@ -51,6 +51,12 @@
   justify-content: space-between;
 }
 
+.monster:hover {
+  cursor: pointer;
+  box-shadow: 0 0 20px rgba(33,33,33); 
+
+}
+
 .monster-hp {
   display:inline-block;
   aspect-ratio: 1;
@@ -141,8 +147,6 @@
   font-size: 1.3vw;
 }
 
-
-
 img {
   max-width: 100%;
   height: auto;
@@ -227,32 +231,41 @@ img {
 }
 
 .card {
-  border: 1px solid black;
+  border: 2px solid black;
   margin: 1%;
   width: 15vw;
   height: 20vh;
   float: left;
 }
 
-.card-pile-card {
-  border: 1px solid black;
-  margin: 1%;
-  height: 15vh;
-  width: 8vw;
-  line-height: normal;
-  float: left;
-}
-
 .fire-energy {
-  background-color: rgba(222, 9, 9, 0.393);
+  background: linear-gradient(90deg, rgb(231, 10, 10),rgb(255, 84, 84), rgb(231, 10, 10), rgb(172, 6, 6));
+  line-height: 20vh;
 }
 
 .water-energy {
   background-color: rgba(1, 29, 240, 0.393);
 }
 
+.card-pile-card {
+  border: 1px solid black;
+  margin: 1%;
+  height: 12vh;
+  width: 12vw;
+  line-height: 1.2;
+  float: left;
+}
+
+
+
 .playable {
-  border: 3px solid grey;
+  border: 4px solid rgb(182, 43, 43);
+  box-shadow: 0 0 5px rgba(33,33,33); 
+}
+
+.playable:hover {
+  cursor: pointer;
+  box-shadow: 0 0 10px rgba(33,33,33); 
 }
 
 #handContainer2 {
@@ -270,20 +283,25 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
   margin-block-start: 0.01em;
   margin-block-end: 0.01em;
   margin-left: 0.1em;
+  padding: 0.2vw;
 }
 
 
 
 .card-pile-card h3 {
-  font-size: 2vw;
+  font-size: 1.5vw;
 }
 
-.card p, .card button {
-  font-size: 1.4vw;
+.card-pile-card p {
+  font-size: 1.3vw;
+}
+
+.card p{
+  font-size: 1.3vw;
 }
 
 .card h3 {
-  font-size: 2vw;
+  font-size: 1.5vw;
 }
 
 .monster-energy {
@@ -296,7 +314,8 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 }
 
 .energy-cost, .hand-card-cost {
-  min-width: 1.4vw;
+  width: 1.8vw;
+  height: 1.8vw;
   text-align: center;
   border-radius: 50%;
   font-size: 1.2em;
@@ -312,4 +331,5 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
   display: flex;
   flex-direction: row;
   justify-content: space-around;
+  padding: 0.3vh;
 }
