--- a/style.css
+++ b/style.css
@@ -92,16 +92,6 @@
     border: 1px dashed white;
   }
 
-.monster-name {
-  margin-left: 0.5vw;
-  font-size: 2vw;
-  text-align: right;
-  vertical-align: center;
-  height: 5vh;
-  line-height: 5vh;
-  white-space: nowrap;
-  color:rgb(93, 0, 0)
-}
 
 .monster-button {
   margin-left: 0.5vw;
@@ -133,7 +123,7 @@
 .monster-top-row {
   display: flex;
   flex-direction: row;
-  justify-content: space-evenly;
+  justify-content: left;
 }
 
 
@@ -145,6 +135,7 @@
 #playerStats {
   color: green;
   border: 3px solid green;
+  height: 30vh;
   width: 35vw;
 }
 
@@ -174,7 +165,8 @@ img {
   font-size: 140%;
 }
 
-.player-monster-row {
+
+.player-decks-row {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -226,6 +218,18 @@ img {
   background-color: brown;
   border: 1px dashed red;
   font-size: 2vh;
+  overflow-wrap: break-word;
+}
+
+.remove-pile {
+  width: 15vw;
+  height: 10vh;
+  line-height: 10vh;
+  color: white;
+  background-color: brown;
+  border: 1px dashed red;
+  font-size: 2vh;
+  text-align: center;
 }
 
 .card {
@@ -237,8 +241,11 @@ img {
 }
 
 .fire-energy {
-  background: linear-gradient(90deg, rgb(231, 10, 10),rgb(255, 84, 84), rgb(231, 10, 10), rgb(172, 6, 6));
-  line-height: 2vh;
+  background: linear-gradient(90deg, rgb(174, 4, 4),rgb(200, 58, 58), rgb(172, 10, 10), rgb(128, 8, 8));
+  line-height: 6vh;
+  text-align: center;
+  font-weight: bold;
+  color: white;
 }
 
 .water-energy {
@@ -250,7 +257,7 @@ img {
   margin: 1%;
   height: 8vh;
   width: 12vw;
-  line-height: 1.2;
+  line-height: 1;
   float: left;
 }
 
@@ -277,7 +284,7 @@ img {
 /* https://codersblock.com/blog/creating-glow-effects-with-css/ 
 https://blog.logrocket.com/css-style-button-accessibility/*/
 
-.monster-top-row h3, .move h3, .move p, .card h3, .card p, .pile p, .card-pile-card h3, #playerStats h4 {
+.move h3, .move p, .card h3, .card p, .pile p, .card-pile-card h3, #playerStats h4 {
   margin-block-start: 0.01em;
   margin-block-end: 0.01em;
   margin-left: 0.1em;
@@ -287,19 +294,23 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 
 
 .card-pile-card h3 {
-  font-size: 1.5vw;
+  font-size: 2.5vmin;
 }
 
 .card-pile-card p {
-  font-size: 1.1vw;
+  font-size: 1.6vmin;
 }
 
 .card p{
-  font-size: 1.1vw;
+  font-size: 1vmax;
+  padding: 0;
 }
 
 .card h3 {
-  font-size: 1.5vw;
+  font-size: 1.5vmax;
+  padding: 0;
+  padding-left: 0.1vmin;
+  margin-bottom: 0;
 }
 
 .monster-energy {
@@ -325,11 +336,20 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
   max-height: 3vw;
  }
 
+ .hand-card-cost {
+  width: 1.4vw;
+  height: 1.4vw;
+  font-size: 1em;
+  padding: 0.1em;
+  margin-right: 3%;
+  line-height: 1em;
+  background-color: rgb(8, 61, 0);
+ }
+
  .card-top-row {
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
-  padding: 0.3vh;
+  justify-content: left;
 }
 
 .card-reward {
