--- a/style.css
+++ b/style.css
@@ -118,11 +118,25 @@
   background: rgb(0,194,255);
   background: radial-gradient(circle, rgba(0,194,255,.80) 55%, rgba(37,203,255,.80) 63%, rgba(79,213,255,.80) 73%);
   clip-path: polygon(50% 12%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
-  height: 3vmax;
-  width: 3vmax;
-  line-height: 3vmax;
+  height: 2vmax;
+  width: 2vmax;
+  line-height: 2vmax;
   text-align: center;
   color: white;
+  flex-shrink: 2;
+  min-width: 0;
+}
+
+.fishbowl {
+  background: rgb(0,194,255);
+  background: radial-gradient(circle, rgba(0,194,255,.80) 55%, rgba(37,203,255,.80) 63%, rgba(79,213,255,.80) 73%);
+  clip-path: polygon(50% 12%, 83% 12%, 100% 43%, 94% 78%, 68% 100%, 32% 100%, 6% 78%, 0% 43%, 17% 12%);
+  height: 2vmax;
+  width: 2vmax;
+  line-height: 2vmax;
+  text-align: center;
+  color: white;
+  flex-shrink: 2;
 }
 
 
@@ -151,7 +165,7 @@
 .monster {
   border: 0.2px solid red;
   border-radius: 1vw;
-  width: 18vw;
+  width: 21vw;
   justify-content: space-between;
 }
 
@@ -170,9 +184,11 @@
   text-align: center;
   flex-grow: 0.1;
   font-size: 1.5vw;
-  flex-shrink: 1;
+  flex-shrink: 2;
+  line-height: 4vmax;
   height: 6vmax;
   max-width: 6vmax;
+  min-width: 0;
 }
 
 .monster-block {
@@ -180,6 +196,7 @@
     background-color: blue;
     color: white;
     width: 20%;
+    min-width: 0;
     text-align: center;
     font-size: 2vw;
     width: 3vmax;
@@ -220,6 +237,7 @@
   display: flex;
   flex-direction: row;
   justify-content: space-evenly;
+  align-items: center;
 }
 
 
@@ -231,7 +249,7 @@
   color: green;
   border: 3px solid green;
   height: 37vh;
-  width: 35vw;
+  width: 28vw;
 }
 
 #playerStats h4, #opponents h4 {
@@ -241,6 +259,7 @@
 .avatar {
   width: 10vmax;
   height: 10vmax;
+  flex-shrink: 0;
 
 }
 
@@ -335,7 +354,7 @@
 .card {
   border: 2px solid black;
   margin: 0.4vmax;
-  width: 15vw;
+  width: 12vw;
   height: 10vh;
   float: left;
 }
@@ -372,7 +391,7 @@
 }
 
 #handContainer2 {
-  width: 35vw;
+  width: 28vw;
   height: 57vh;
   display: flex;
   flex-direction: row;
@@ -488,5 +507,16 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
   background-image: url("img/crosshair.PNG");
   height: 1.6vmax;
   width: 1.6vmax;
-  color: green;
+}
+
+.poison {
+  border-radius:0% 100% 100% 100%;
+	transform: rotate(45deg);
+  background-color: green;
+  color: white;
+  height: 2vmax;
+  width: 2vmax;
+  line-height: 2vmax;
+  display: inline-block;
+  text-align: center;
 }
