--- a/style.css
+++ b/style.css
@@ -60,7 +60,8 @@
 }
 
 #stats {
-  background-image: url(img/pent3.png);
+  background-image: url(img/newpentacle.png);
+  background-size: cover;
 }
 
 #town {
@@ -136,7 +137,24 @@
 }
 
 #TownDecrease {
+  background-color: rgb(181, 172, 0);
+}
+
+#TownHealer {
   background-color: crimson;
+}
+
+.heal-button {
+  margin: 5vmax;
+}
+
+.healer-div {
+  display: flex;
+  flex-direction: column;
+}
+
+.remove-div button {
+  width: 75%;
 }
 
 #playerMonster {
@@ -237,6 +255,22 @@
   min-width: 0;
 }
 
+.monster-hp-town {
+  display:inline-block;
+  aspect-ratio: 1;
+  border-image: radial-gradient(red 69%,#0000 70%) 84.5% fill/100%;
+  clip-path: polygon(-41% 0,50% 91%, 141% 0);
+  color: white;
+  text-align: center;
+  flex-grow: 0.1;
+  font-size: 1vmax;
+  flex-shrink: 2;
+  line-height: 2vmax;
+  height: 3.5vmax;
+  max-width: 3.5vmax;
+  min-width: 0;
+}
+
 .monster-block {
     border-radius: 50% 50% 50% 50% / 12% 12% 30% 30%;
     background-color: blue;
@@ -318,7 +352,6 @@
   justify-content: space-around;
   font-size: 60%;
   margin-block-start: 0em;
-  background-image: url(img/pent3.png);
   background-size: cover;
 }
 
@@ -418,7 +451,7 @@
 }
 
 .card {
-  border: 2px solid black;
+  border: 0.5px solid rgb(255, 211, 101);
   background: linear-gradient(90deg, rgb(255, 238, 208),rgb(230, 171, 94), rgb(255, 200, 127), rgb(243, 133, 23));
   margin: 0.4vmax;
   width: 13vw;
@@ -436,12 +469,13 @@
   height: 10vh;
   width: 15vw;
   float: left;
+  overflow: wrap;
 }
 
 
 
 .playable {
-  border: 4px solid rgb(8, 61, 0);
+  
   box-shadow: 0 0 2px rgba(33,33,33); 
   justify-content: center;
 }
@@ -453,9 +487,14 @@
   color: white;
 }
 
+#handContainer2 .playable:hover {
+  border: 1.5px solid rgb(255, 211, 101);
+}
+
 #handContainer2 {
   width: 30vw;
   height: 57vh;
+  background-color: #0500332a;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -572,7 +611,7 @@ https://blog.logrocket.com/css-style-button-accessibility/*/
 
 
 .skip-button{
-  margin: 2vw;
+  margin: 5vmax;
 }
 
 .hunted {
