--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@
 }
 
 #stats {
-  background-image: url(img/newpentacle.png);
+  background-image: url(img/newpentacle.PNG);
   background-size: cover;
 }
 
